--- a/gatos negros.html
+++ b/gatos negros.html
@@ -19,7 +19,7 @@
 
   <nav>
       <ul>                                 <!--cabecera-->
-        <li><a href="indice.html">inicio</a></li>
+        <li><a href="index.html">inicio</a></li>
         <li><a href="#">veterinarias</a></li>
         <li><a href="#">peluqueria</a></li>
         <li><a href="#">cultura gatuna</a></li>
@@ -135,7 +135,7 @@
 
     <div class="container">      <!--aqui comienza contenedores-->
      <div class="col"><a href="hierba gatera.html">hierba gatera y sus propiedades</a></div>
-     <div class="col"><a href="indice.html">inicio</a></div>
+     <div class="col"><a href="index.html">inicio</a></div>
      <div class="col"><a href="gestos gatunos.html">gestos gatunos</a></div>
   </div>
   
