--- a/hierba gatera.html
+++ b/hierba gatera.html
@@ -18,7 +18,7 @@
 
     <nav>
       <ul> <!--cabecera-->
-        <li><a href="indice.html">inicio</a></li>
+        <li><a href="index.html">inicio</a></li>
         <li><a href="#">veterinarias</a></li>
         <li><a href="#">peluqueria</a></li>
         <li class="dropdown"><a href="#">cultura gatuna ▾</a>
@@ -95,7 +95,7 @@
 
     <div class="container"> <!--aqui comienza contenedores-->
       <div class="col"><a href="alimentos peligroso.html">alimentos peligroso</a></div>
-      <div class="col"><a href="indice.html">inicio</a></div>
+      <div class="col"><a href="index.html">inicio</a></div>
       <div class="col"><a href="gestos gatunos.html">gestos gatunos</a></div>
     </div>
 
