--- a/quemaduras.html
+++ b/quemaduras.html
@@ -17,7 +17,7 @@
 
     <nav>
       <ul> <!--cabecera-->
-        <li><a href="indice.html">inicio</a></li>
+        <li><a href="index.html">inicio</a></li>
         <li><a href="#">veterinarias</a></li>
         <li><a href="#">peluqueria</a></li>
         <li class="dropdown"><a href="#">cultura gatuna ▾</a>
@@ -105,7 +105,7 @@
 
     <div class="container">      <!--aqui comienza contenedores-->
      <div class="col"><a href="hierba gatera.html">la hierba gatera y sus propiedades</a></div>
-     <div class="col"><a href="indice.html">inicio</a></div>
+     <div class="col"><a href="index.html">inicio</a></div>
      <div class="col"><a href="intoxicaciones.html">intoxicaciones felinas</a></div>
   </div>
   
