--- a/gestos gatunos.html
+++ b/gestos gatunos.html
@@ -18,7 +18,7 @@
 
     <nav>
       <ul> <!--cabecera-->
-        <li><a href="indice.html">inicio</a></li>
+        <li><a href="index.html">inicio</a></li>
         <li><a href="veterinarias.html">veterinarias</a></li>
         <li><a href="#">peluqueria</a></li>
         <li class="dropdown"><a href="#">cultura gatuna ▾</a>
@@ -198,7 +198,7 @@
 
     <div class="container"> <!--aqui comienza contenedores-->
       <div class="col"><a href="alimentos peligroso.html">alimentos peligroso</a></div>
-      <div class="col"><a href="indice.html">inicio</a></div>
+      <div class="col"><a href="index.html">inicio</a></div>
       <div class="col"><a href="hierba gatera.html">La hierba gatera y sus propiedades</a></div>
     </div>
 
