--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <nav>
       <ul> <!--cabecera-->
-        <li><a href="indice.html">inicio</a></li>
+        <li><a href="index.html">inicio</a></li>
         <li class="dropdown"><a href="#">servicios felinos ▾</a>
           <ul class="dropdown-menu">
             <li><a href="gatos negros.html">peluqueria a domicilio</a></li>
