--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <li class="dropdown"><a href="#">emergencias ▾</a>
           <ul class="dropdown-menu">
             <li><a href="intoxicaciones.html">intoxicacion</a></li>
-            <li><a href="gestos gatunos.html">atropellos</a></li>
+            <li><a href="atropellos.html">atropellos</a></li>
             <li><a href="quemaduras.html">quemaduras</a></li>
             <li><a href="alimentos peligroso.html">heridas menores</a></li>
           </ul>
