--- a/atropellos.html
+++ b/atropellos.html
@@ -36,17 +36,18 @@
 
     <main class="principal">
     <!--inicio texto explicativo-->
-    <h1>quemaduras en gatos y como actuar</h1>
+    <h1>atropellos en gatos y como actuar</h1>
     <div class="contenedorhierba">
       <img src="imagenes/gato-quemado.webp" class="image-02" alt="">
-      <p class="contenidoprincipal"> Las quemaduras en gatos pueden causar enrojecimiento, ampollas, inflamación y 
-        dolor, dependiendo de la gravedad. Ante una quemadura, enfría la zona con agua a temperatura natural y busca 
-        atención veterinaria de inmediato. El veterinario limpiará la zona, aplicará tratamiento para el dolor y la 
-        infección, y evitará que el gato se lama la herida con un collar isabelino.Las quemaduras son lesiones de los 
-        tejidos causadas por la exposición a calor extremo, químicos, electricidad o radiación. Se clasifican en tres 
-        grados según la profundidad del daño y son Quemaduras de primer grado: Afectan solo la capa superficial de la 
-        piel (epidermis).Quemaduras de segundo grado: Afectan la epidermis y la dermis superficial.Quemaduras de 
-        tercer grado: Afectan todas las capas de la piel y pueden llegar a tejidos subyacentes como músculos y huesos.
+      <p class="contenidoprincipal"> El tráfico constituye un peligro mortal para muchos animales. 
+        ¿Cómo deben comportarse los conductores si atropellan a un gato? Te damos la información 
+        más importante sobre cómo ayudar a un gato atropellado,en el fondo la pesadilla de 
+        cualquiera al volante es ver un gato salir entre los coches aparcados y lanzarse a la calle. 
+        Todo va tan rápido que no da ni tiempo a frenar ni a esquivarlo. El pobre animal acaba bajo 
+        las ruedas o lanzado a la calle.
+        <br>
+        <br>
+        la manera mas adecuada de actuar es primero mantener la calma 
     </div>
     <div>
       <ol>
@@ -104,7 +105,7 @@
     </form>    <!--aqui termina como meter texto crudo-->
 
     <div class="container">      <!--aqui comienza contenedores-->
-     <div class="col"><a href="hierba gatera.html">la hierba gatera y sus propiedades</a></div>
+     <div class="col"><a href="alimentos peligroso.html">alimentos peligrosos</a></div>
      <div class="col"><a href="indice.html">inicio</a></div>
      <div class="col"><a href="intoxicaciones.html">intoxicaciones felinas</a></div>
   </div>
