--- a/atropellos.html
+++ b/atropellos.html
@@ -38,7 +38,7 @@
     <!--inicio texto explicativo-->
     <h1>atropellos en gatos y como actuar</h1>
     <div class="contenedorhierba">
-      <img src="imagenes/gato-quemado.webp" class="image-02" alt="">
+      <img src="imagenes/gato tropellado 1.webp" class="image-02" alt="">
       <p class="contenidoprincipal"> El tráfico constituye un peligro mortal para muchos animales. 
         ¿Cómo deben comportarse los conductores si atropellan a un gato? Te damos la información 
         más importante sobre cómo ayudar a un gato atropellado,en el fondo la pesadilla de 
@@ -47,7 +47,11 @@
         las ruedas o lanzado a la calle.
         <br>
         <br>
-        la manera mas adecuada de actuar es primero mantener la calma 
+        la manera mas adecuada de actuar es primero mantener la calma,detenerse y auxiliar de manera 
+        segura al animal viendo si tiene alguna placa de contacto o comunicarse con algun vecino de 
+        la zona y sino estan estas opciones tomar con cuidado al animal y llevarlo a un veterinario 
+        pero hay una triste opción si el gato atropellado está claramente muerto y has apartado el 
+        cuerpo de la carretera, ya has cumplido con tu obligación. Por lo tanto, puedes seguir tu camino.
     </div>
     <div>
       <ol>
@@ -91,7 +95,7 @@
       </ol>
     </p> 
    </div> 
-   <img src="imagenes/quemaduras_gatos.webp" class="image-02" alt=""> <!--fin texto explicativo-->
+   <img src="imagenes/gato atropellado 2.webp" class="image-02" alt=""> <!--fin texto explicativo-->
    
 
     <!--fin contenido segundo-->
