--- a/atropellos.html
+++ b/atropellos.html
@@ -56,6 +56,7 @@
     <div>
       <ol>
         <h3>Primeros auxilios y tratamiento</h3>
+        <h4>si atropellan a tu gato estos son los pasos a realizar</h4>
         <li><b>Enfriamiento: </b>Aplicar agua fría sobre la zona afectada durante 10-15 minutos para reducir el 
           daño térmico. NO USAR HIELO directamente sobre la quemadura.</li>
             <br>
