--- a/atropellos.html
+++ b/atropellos.html
@@ -57,46 +57,32 @@
       <ol>
         <h3>Primeros auxilios y tratamiento</h3>
         <h4>si atropellan a tu gato estos son los pasos a realizar</h4>
-        <li><b>Enfriamiento: </b>Aplicar agua fría sobre la zona afectada durante 10-15 minutos para reducir el 
-          daño térmico. NO USAR HIELO directamente sobre la quemadura.</li>
+
+        <li><b>No muevas al gato si no es necesario: </b>Mantenlo seguro y evita movimientos 
+          innecesarios para no agravar posibles fracturas o heridas internas.</li>
             <br>
-        <li><b>Limpieza de la herida: </b>Limpiar la zona afectada con solución salina estéril.</li>
+        <li><b>Viste con cuidado: </b>Usa una manta o toalla gruesa para cogerlo. Esto te protegerá de posibles mordeduras 
+          o arañazos por miedo o dolor, y amortiguará el cuerpo del gato</li>
             <br>
-        <li><b>Vendajes: </b>Cubrir la herida con vendajes estériles y con una gaza limpia para que el animal no se lama</li>
+        <li><b>TRASLÁDALO CON URGENCIA: </b>Llévalo lo antes posible a un centro veterinario de urgencias. Llama antes 
+          para avisar de tu llegada y dar detalles sobre su estado. </li>
             <br>
-        <li><b>LLEVAR DE URGENCIAS AL VETERINARIO: </b>solo el especialista puede evaluar y dar medicamentos adecuados para
-          desinflamar la herida y ayudar al dolor con medicamentos.</li>
+        <li><b>Si sangra mucho: </b>Puedes presionar la herida con una toalla limpia, pero NO 
+          APLIQUES TORNIQUETES.</li>
+          <br>
+        <li><b>Si tiene heridas en la cabeza: </b>TEN CUIDADO, podría tener fracturas de mandíbula, 
+          conmoción cerebral o convulsiones.</li>
+          <br>
+        <li><b></b></li>
       </ol>
     </p> 
    </div>  <!--fin texto explicativo-->
 
     <!--inicio dato en recuadro-->
-    <p class="parrafo">NUNCA USAR HIELO SOBRE UNA QUEMADURA, ESTO SOLO PROVOCARA UN DAÑO MAYOR AL EXPUESTO.
+    <p class="parrafo">SE DICE que si dejas morir un gato o si lo matas SON 7 AÑOS DE MALA SUERTE para el responsable.
     </p> <!--fin dato en recuadro-->
 
-    <h1>Causas de las quemaduras</h1> <!--inicio 2do contenido-->
-    <div class="contenedorgatorelajado">
-      <p class="contenidoprincipal"> las causas de una quemadura pueden ser de diversos tipos por lo que la precaucion siempre
-         es primero. a continuacion te dejamos las causas donde mas se presentan una quemadura.
-      </div>
-<div>
-      <ol>
-        <li><b>Quemaduras por radiación: </b> Exposición prolongada a la luz solar sin protección adecuada.Limita 
-          la exposición al sol de tu gato, especialmente durante las horas de mayor intensidad. Si es posible, 
-          sácalo a pasear temprano por la mañana o al atardecer.estas quemaduras pasan en gatos sin pelo o razurados
-          en epocas de calor por su gran melena</li>
-            <br>
-        <li><b>quemaduras Térmicas: </b>Contacto con objetos calientes, líquidos en ebullición o incendios.Ten 
-          cuidado con las fuentes de calor como estufas, velas, o líquidos calientes.</li>
-            <br>
-        <li><b>quemaduras Químicas: </b>Exposición a productos de limpieza, ácidos o alcalinos fuertes.Mantén los productos químicos, 
-          como limpiadores, disolventes y ácidos, fuera del alcance de tu gato. </li>
-            <br>
-        <li><b>quemaduras Eléctricas: </b>Masticación de cables eléctricos o descargas eléctricas.</li>
-      </ol>
-    </p> 
-   </div> 
-   <img src="imagenes/gato atropellado 2.webp" class="image-02" alt=""> <!--fin texto explicativo-->
+   <img src="imagenes/gato atropellado 2.webp" class="image-03" alt=""> <!--fin texto explicativo-->
    
 
     <!--fin contenido segundo-->
