--- a/atropellos.html
+++ b/atropellos.html
@@ -97,7 +97,7 @@
 
     <div class="container">      <!--aqui comienza contenedores-->
      <div class="col"><a href="alimentos peligroso.html">alimentos peligrosos</a></div>
-     <div class="col"><a href="indice.html">inicio</a></div>
+     <div class="col"><a href="index.html">inicio</a></div>
      <div class="col"><a href="intoxicaciones.html">intoxicaciones felinas</a></div>
   </div>
   
