--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <li><a href="intoxicaciones.html">intoxicacion</a></li>
             <li><a href="atropellos.html">atropellos</a></li>
             <li><a href="quemaduras.html">quemaduras</a></li>
-            <li><a href="alimentos peligroso.html">heridas menores</a></li>
+            <li><a href="heridas menores.html">heridas menores</a></li>
           </ul>
           </li>
         <li class="dropdown"><a href="#">servicios funebres ▾</a>
