--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <li><a href="atropellos.html">atropellos</a></li>
             <li><a href="quemaduras.html">quemaduras</a></li>
             <li><a href="heridas menores.html">heridas menores</a></li>
+            <li><a href="botiquin para S.O.S.html">botiquin para S.O.S</a></li>
           </ul>
           </li>
         <li class="dropdown"><a href="#">servicios funebres ▾</a>
