--- a/heridas menores.html
+++ b/heridas menores.html
@@ -36,7 +36,7 @@
 
     <main class="principal">
     <!--inicio texto explicativo-->
-    <h1>atropellos en gatos y como actuar</h1>
+    <h1>Heridas menores en gatos</h1>
     <div class="contenedorhierba">
       <img src="imagenes/gato tropellado 1.webp" class="image-02" alt="">
       <p class="contenidoprincipal"> El tráfico constituye un peligro mortal para muchos animales. 
