--- a/botiquin para S.O.S.html
+++ b/botiquin para S.O.S.html
@@ -17,7 +17,7 @@
 
     <nav>
       <ul> <!--cabecera-->
-        <li><a href="indice.html">inicio</a></li>
+        <li><a href="index.html">inicio</a></li>
         <li><a href="#">veterinarias</a></li>
         <li><a href="#">peluqueria</a></li>
         <li class="dropdown"><a href="#">cultura gatuna ▾</a>
@@ -36,7 +36,7 @@
 
     <main class="principal">
     <!--inicio texto explicativo-->
-    <h1>atropellos en gatos y como actuar</h1>
+    <h1>Heridas menores en gatos</h1>
     <div class="contenedorhierba">
       <img src="imagenes/gato tropellado 1.webp" class="image-02" alt="">
       <p class="contenidoprincipal"> El tráfico constituye un peligro mortal para muchos animales. 
