--- a/atropellos.html
+++ b/atropellos.html
@@ -17,7 +17,7 @@
 
     <nav>
       <ul> <!--cabecera-->
-        <li><a href="indice.html">inicio</a></li>
+        <li><a href="index.html">inicio</a></li>
         <li><a href="#">veterinarias</a></li>
         <li><a href="#">peluqueria</a></li>
         <li class="dropdown"><a href="#">cultura gatuna ▾</a>
