--- a/botiquin para S.O.S.html
+++ b/botiquin para S.O.S.html
@@ -36,27 +36,19 @@
 
     <main class="principal">
     <!--inicio texto explicativo-->
-    <h1>Heridas menores en gatos</h1>
+    <h1>el botiquin y como ayudarian los elementos a tener</h1>
     <div class="contenedorhierba">
       <img src="imagenes/gato tropellado 1.webp" class="image-02" alt="">
-      <p class="contenidoprincipal"> El tráfico constituye un peligro mortal para muchos animales. 
-        ¿Cómo deben comportarse los conductores si atropellan a un gato? Te damos la información 
-        más importante sobre cómo ayudar a un gato atropellado,en el fondo la pesadilla de 
-        cualquiera al volante es ver un gato salir entre los coches aparcados y lanzarse a la calle. 
-        Todo va tan rápido que no da ni tiempo a frenar ni a esquivarlo. El pobre animal acaba bajo 
-        las ruedas o lanzado a la calle.
-        <br>
-        <br>
-        la manera mas adecuada de actuar es primero mantener la calma,detenerse y auxiliar de manera 
-        segura al animal viendo si tiene alguna placa de contacto o comunicarse con algun vecino de 
-        la zona y sino estan estas opciones tomar con cuidado al animal y llevarlo a un veterinario 
-        pero hay una triste opción si el gato atropellado está claramente muerto y has apartado el 
-        cuerpo de la carretera, ya has cumplido con tu obligación. Por lo tanto, puedes seguir tu camino.
+      <p class="contenidoprincipal"> Al igual que los botiquines que tenemos en casa para uno,se 
+        puede armar uno para gatos.esto nos ayudara a soscorrerlo teniendo los implementos adecuados.
+        uno de los problemas que se tiene con los gatos es que son osados y en el caso de los no castrado 
+        a tiempo o castrado tardiamente sabems que llegara con una herida nueva si son de mal caracter 
+        y hasta puede pasar que pise una espina o se corte con un vidrio y es hay cuando el botiquin 
+        es una gran ayuda a aliviar la molestia de nuestro amado felino.
     </div>
     <div>
       <ol>
-        <h3>Primeros auxilios y tratamiento</h3>
-        <h4>si atropellan a tu gato estos son los pasos a realizar</h4>
+        <h3>implementos de Primeros auxilios</h3>
 
         <li><b>No muevas al gato si no es necesario: </b>Mantenlo seguro y evita movimientos 
           innecesarios para no agravar posibles fracturas o heridas internas.</li>
@@ -98,7 +90,7 @@
     <div class="container">      <!--aqui comienza contenedores-->
      <div class="col"><a href="alimentos peligroso.html">alimentos peligrosos</a></div>
      <div class="col"><a href="index.html">inicio</a></div>
-     <div class="col"><a href="intoxicaciones.html">intoxicaciones felinas</a></div>
+     <div class="col"><a href="quemaduras.html">Quemaduras y sus categorias/a></div>
   </div>
   
   </main>
