--- a/botiquin para S.O.S.html
+++ b/botiquin para S.O.S.html
@@ -38,7 +38,7 @@
     <!--inicio texto explicativo-->
     <h1>el botiquin y como ayudarian los elementos a tener</h1>
     <div class="contenedorhierba">
-      <img src="imagenes/gato tropellado 1.webp" class="image-02" alt="">
+      <img src="imagenes/botiquin 1.webp" class="image-02" alt="">
       <p class="contenidoprincipal"> Al igual que los botiquines que tenemos en casa para uno,se 
         puede armar uno para gatos.esto nos ayudara a soscorrerlo teniendo los implementos adecuados.
         uno de los problemas que se tiene con los gatos es que son osados y en el caso de los no castrado 
@@ -50,31 +50,53 @@
       <ol>
         <h3>implementos de Primeros auxilios</h3>
 
-        <li><b>No muevas al gato si no es necesario: </b>Mantenlo seguro y evita movimientos 
-          innecesarios para no agravar posibles fracturas o heridas internas.</li>
+        <li><b>Guantes desechables</b></li>
             <br>
-        <li><b>Viste con cuidado: </b>Usa una manta o toalla gruesa para cogerlo. Esto te protegerá de posibles mordeduras 
-          o arañazos por miedo o dolor, y amortiguará el cuerpo del gato</li>
+        <li><b>Tijeras para vendas</b></li>
             <br>
-        <li><b>TRASLÁDALO CON URGENCIA: </b>Llévalo lo antes posible a un centro veterinario de urgencias. Llama antes 
-          para avisar de tu llegada y dar detalles sobre su estado. </li>
+        <li><b>Vendas acolchadas: </b>a diferencia de las nuestras, las vendas para 
+          gatos deben estar bien acolchadas para evitar llagas. </li>
             <br>
-        <li><b>Si sangra mucho: </b>Puedes presionar la herida con una toalla limpia, pero NO 
-          APLIQUES TORNIQUETES.</li>
+        <li><b>Vendas de gasa: </b>para hacer un vendaje de compresión</li>
           <br>
-        <li><b>Si tiene heridas en la cabeza: </b>TEN CUIDADO, podría tener fracturas de mandíbula, 
-          conmoción cerebral o convulsiones.</li>
+        <li><b>Vendas adhesivas </b></li>
           <br>
-        <li><b></b></li>
+        <li><b>Compresas</b></li>
+         <br>
+        <li><b>Apósitos</b></li>
+        <br>
+        <li><b>Peine quita pulgas</b></li>
+        <br>
+        <li><b>Termómetro</b></li>
+        <br>
+        <li><b>Vaselina o lubricante: </b>para facilitar la introducción del termómetro</li>
+        <br>
+        <li><b>Pinzas</b></li>
+          <br>
+        <li><b>Linterna</b></li>
+        <br>
+        <li><b>Espátula de madera: </b>para entablillar fracturas de huesos temporalmente o recoger muestras</li>
+          <br>
+        <li><b>Bolsas de plástico pequeñas: </b>para guardar muestras, como de vómito o heces</li>
+        <br>
+        <li><b>Linterna</b></li>
+        <h3>medicamentos de Primeros auxilios:</h3>
+        <br>
+        <li><b>Pastillas de carbón vegetal:</b>que siempre debes tener en la farmacia para gatos en especial si sale a la calle</li>
+        <br>
+        <li><b>Desinfectantes: </b>preferiblemente en forma de pomada, ya que a los gatos no les gusta el ruido de los aerosoles</li>
+        <br>
+        <li><b>Fármacos para la diarrea</b>consulta al veterinario para obtenerlo</li>
       </ol>
     </p> 
    </div>  <!--fin texto explicativo-->
-
     <!--inicio dato en recuadro-->
-    <p class="parrafo">SE DICE que si dejas morir un gato o si lo matas SON 7 AÑOS DE MALA SUERTE para el responsable.
+    <p class="parrafo">Importante: Con heridas grandes, acude siempre al veterinario.
     </p> <!--fin dato en recuadro-->
 
-   <img src="imagenes/gato atropellado 2.webp" class="image-03" alt=""> <!--fin texto explicativo-->
+    <div>
+      <img src="imagenes/botiquin 2.webp" class="image-02" alt=""> 
+   </div>  <!--fin texto explicativo-->
    
 
     <!--fin contenido segundo-->
@@ -88,9 +110,9 @@
     </form>    <!--aqui termina como meter texto crudo-->
 
     <div class="container">      <!--aqui comienza contenedores-->
-     <div class="col"><a href="alimentos peligroso.html">alimentos peligrosos</a></div>
+     <div class="col"><a href="atropellos.html">que hacer si atropellan a mi gato</a></div>
      <div class="col"><a href="index.html">inicio</a></div>
-     <div class="col"><a href="quemaduras.html">Quemaduras y sus categorias/a></div>
+     <div class="col"><a href="quemaduras.html">Quemaduras y sus categorias</a></div>
   </div>
   
   </main>
