--- a/heridas menores.html
+++ b/heridas menores.html
@@ -15,20 +15,42 @@
     <header>
     <h1>la casa de la gata chismosa</h1> <!--lo que queda fijo en la cabecera de la pagina-->
 
-    <nav>
+     <nav>
       <ul> <!--cabecera-->
-        <li><a href="indice.html">inicio</a></li>
-        <li><a href="#">veterinarias</a></li>
-        <li><a href="#">peluqueria</a></li>
+        <li><a href="index.html">inicio</a></li>
+        <!-- <li class="dropdown"><a href="#">servicios felinos ▾</a>
+          <ul class="dropdown-menu">
+            <li><a href="gatos negros.html">peluqueria a domicilio</a></li>
+            <li><a href="gestos gatunos.html">tiendas de peluqueria</a></li>
+            <li><a href="hierba gatera.html">hoteles</a></li>
+            <li><a href="hierba gatera.html">adistramiento felino</a></li>
+            <li><a href="hierba gatera.html">tiendas economicas</a></li>
+          </ul>
+        </li> -->
         <li class="dropdown"><a href="#">cultura gatuna ▾</a>
           <ul class="dropdown-menu">
             <li><a href="gatos negros.html">los gatos negros</a></li>
             <li><a href="gestos gatunos.html">gestos gatunos</a></li>
             <li><a href="hierba gatera.html">hierba gatera</a></li>
+            <li><a href="alimentos peligroso.html">alimentos peligrosos</a></li>
           </ul>
         </li>
-        <li><a href="#">emergencias</a></li>
-        <li><a href="#">servicios funebres</a></li>
+        <li class="dropdown"><a href="#">emergencias ▾</a>
+          <ul class="dropdown-menu">
+            <li><a href="intoxicaciones.html">intoxicacion</a></li>
+            <li><a href="atropellos.html">atropellos</a></li>
+            <li><a href="quemaduras.html">quemaduras</a></li>
+            <li><a href="heridas menores.html">heridas menores</a></li>
+            <li><a href="botiquin para S.O.S.html">botiquin para S.O.S</a></li>
+          </ul>
+          </li>
+        <li class="dropdown"><a href="#">servicios funebres ▾</a>
+          <ul class="dropdown-menu">
+            <li><a href="#">cremación</a></li>
+            <li><a href="#">taxidermia</a></li>
+            <li><a href="#">retratos de mascotas</a></li>
+          </ul>
+        </li>
         <li><a href="contacto.html">contacto</a></li>
       </ul>
     </nav> <!-- fin cabecera-->
@@ -38,7 +60,7 @@
     <!--inicio texto explicativo-->
     <h1>Heridas menores en gatos</h1>
     <div class="contenedorhierba">
-      <img src="imagenes/gato tropellado 1.webp" class="image-02" alt="">
+      <img src="imagenes/cura de heridas en casa.webp" class="image-02" alt="">
       <p class="contenidoprincipal"> El tráfico constituye un peligro mortal para muchos animales. 
         ¿Cómo deben comportarse los conductores si atropellan a un gato? Te damos la información 
         más importante sobre cómo ayudar a un gato atropellado,en el fondo la pesadilla de 
@@ -72,8 +94,7 @@
           <br>
         <li><b>Si tiene heridas en la cabeza: </b>TEN CUIDADO, podría tener fracturas de mandíbula, 
           conmoción cerebral o convulsiones.</li>
-          <br>
-        <li><b></b></li>
+        
       </ol>
     </p> 
    </div>  <!--fin texto explicativo-->
@@ -82,7 +103,7 @@
     <p class="parrafo">SE DICE que si dejas morir un gato o si lo matas SON 7 AÑOS DE MALA SUERTE para el responsable.
     </p> <!--fin dato en recuadro-->
 
-   <img src="imagenes/gato atropellado 2.webp" class="image-03" alt=""> <!--fin texto explicativo-->
+   <img src="imagenes/cura de herida en casa.webp" class="image-03" alt=""> <!--fin texto explicativo-->
    
 
     <!--fin contenido segundo-->
