--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav>
       <ul> <!--cabecera-->
         <li><a href="index.html">inicio</a></li>
-        <li class="dropdown"><a href="#">servicios felinos ▾</a>
+        <!-- <li class="dropdown"><a href="#">servicios felinos ▾</a>
           <ul class="dropdown-menu">
             <li><a href="gatos negros.html">peluqueria a domicilio</a></li>
             <li><a href="gestos gatunos.html">tiendas de peluqueria</a></li>
@@ -29,7 +29,7 @@
             <li><a href="hierba gatera.html">adistramiento felino</a></li>
             <li><a href="hierba gatera.html">tiendas economicas</a></li>
           </ul>
-        </li>
+        </li> -->
         <li class="dropdown"><a href="#">cultura gatuna ▾</a>
           <ul class="dropdown-menu">
             <li><a href="gatos negros.html">los gatos negros</a></li>
@@ -49,9 +49,9 @@
           </li>
         <li class="dropdown"><a href="#">servicios funebres ▾</a>
           <ul class="dropdown-menu">
-            <li><a href="gatos negros.html">cremación</a></li>
-            <li><a href="gestos gatunos.html">taxidermia</a></li>
-            <li><a href="gestos gatunos.html">retratos de mascotas</a></li>
+            <li><a href="#">cremación</a></li>
+            <li><a href="#">taxidermia</a></li>
+            <li><a href="#">retratos de mascotas</a></li>
           </ul>
         </li>
         <li><a href="contacto.html">contacto</a></li>
