--- a/botiquin para S.O.S.html
+++ b/botiquin para S.O.S.html
@@ -18,17 +18,38 @@
     <nav>
       <ul> <!--cabecera-->
         <li><a href="index.html">inicio</a></li>
-        <li><a href="#">veterinarias</a></li>
-        <li><a href="#">peluqueria</a></li>
+        <!-- <li class="dropdown"><a href="#">servicios felinos ▾</a>
+          <ul class="dropdown-menu">
+            <li><a href="gatos negros.html">peluqueria a domicilio</a></li>
+            <li><a href="gestos gatunos.html">tiendas de peluqueria</a></li>
+            <li><a href="hierba gatera.html">hoteles</a></li>
+            <li><a href="hierba gatera.html">adistramiento felino</a></li>
+            <li><a href="hierba gatera.html">tiendas economicas</a></li>
+          </ul>
+        </li> -->
         <li class="dropdown"><a href="#">cultura gatuna ▾</a>
           <ul class="dropdown-menu">
             <li><a href="gatos negros.html">los gatos negros</a></li>
             <li><a href="gestos gatunos.html">gestos gatunos</a></li>
             <li><a href="hierba gatera.html">hierba gatera</a></li>
+            <li><a href="alimentos peligroso.html">alimentos peligrosos</a></li>
           </ul>
         </li>
-        <li><a href="#">emergencias</a></li>
-        <li><a href="#">servicios funebres</a></li>
+        <li class="dropdown"><a href="#">emergencias ▾</a>
+          <ul class="dropdown-menu">
+            <li><a href="intoxicaciones.html">intoxicacion</a></li>
+            <li><a href="atropellos.html">atropellos</a></li>
+            <li><a href="quemaduras.html">quemaduras</a></li>
+            <li><a href="heridas menores.html">heridas menores</a></li>
+          </ul>
+          </li>
+        <li class="dropdown"><a href="#">servicios funebres ▾</a>
+          <ul class="dropdown-menu">
+            <li><a href="#">cremación</a></li>
+            <li><a href="#">taxidermia</a></li>
+            <li><a href="#">retratos de mascotas</a></li>
+          </ul>
+        </li>
         <li><a href="contacto.html">contacto</a></li>
       </ul>
     </nav> <!-- fin cabecera-->
