--- a/atropellos.html
+++ b/atropellos.html
@@ -37,7 +37,7 @@
         </li>
         <li class="dropdown"><a href="#">emergencias ▾</a>
           <ul class="dropdown-menu">
-            <li><a href="intoxicaciones.html">intoxicacion</a></li>
+            <li><a href="intoxicaciones.html">intoxicación</a></li>
             <li><a href="quemaduras.html">quemaduras</a></li>
             <li><a href="heridas menores.html">heridas menores</a></li>
             <li><a href="botiquin para S.O.S.html">botiquin para S.O.S</a></li>
