--- a/alimentos peligroso.html
+++ b/alimentos peligroso.html
@@ -36,7 +36,7 @@
         </li>
         <li class="dropdown"><a href="#">emergencias ▾</a>
           <ul class="dropdown-menu">
-            <li><a href="intoxicaciones.html">intoxicacion</a></li>
+            <li><a href="intoxicaciones.html">intoxicación</a></li>
             <li><a href="atropellos.html">atropellos</a></li>
             <li><a href="quemaduras.html">quemaduras</a></li>
             <li><a href="heridas menores.html">heridas menores</a></li>
