--- a/cremaciones.html
+++ b/cremaciones.html
@@ -43,12 +43,12 @@
             <li><a href="botiquin para S.O.S.html">botiquin para S.O.S</a></li>
           </ul>
           </li>
-        <li class="dropdown"><a href="#">servicios funebres ▾</a>
+        <!-- <li class="dropdown"><a href="#">servicios funebres ▾</a>
           <ul class="dropdown-menu">
             <li><a href="#">taxidermia</a></li>
             <li><a href="#">retratos de mascotas</a></li>
           </ul>
-        </li>
+        </li> -->
         <li><a href="contacto.html">contacto</a></li>
       </ul>
     </nav> <!-- fin cabecera-->
@@ -63,14 +63,10 @@
         deja en muchos casos con una sensación de desesperanza, pero para ello hay un servicio que es muy 
         recurrente y que es el servicio funebre de la cremación que se hace tanto para animales como para personas. 
         si bien no es un servicio barato aqui te dejamos algunas opciones donde dan servicio completo:
-        <br>
-        <li><a href="https://eternapet.cl/?gad_source=1&gad_campaignid=9767925036&gbraid=0AAAAACcUSOBz3X2C-HaJ242NcQlCZ-Cj_&gclid=CjwKCAiAzrbIBhA3EiwAUBaUdcHeRUqmM-ClooHBQV1Vvvj8rENZvNrf_36q2P3Gn67nLGlfNhRsaRoCy78QAvD_BwE" </a><b>Eternapet</b>servicio 24/7 de la region metropolitana</li>
     </div>
     <div>
       <ol>
-        <h3>Primeros auxilios y tratamiento</h3>
-        <li><b>Enfriamiento: </b>Aplicar agua fría sobre la zona afectada durante 10-15 minutos para reducir el 
-          daño térmico. NO USAR HIELO directamente sobre la quemadura.</li>
+        <div class="col"><a href="www.mascotasporsiempre.cl">mascotas por siempre: servicio 24/7 en la region metropolitana</a></div>
             <br>
         <li><b>Limpieza de la herida: </b>Limpiar la zona afectada con solución salina estéril.</li>
             <br>
