--- a/cremaciones.html
+++ b/cremaciones.html
@@ -66,10 +66,10 @@
     </div>
     <div>
       <ol>
-        <div class="col"><a href="www.mascotasporsiempre.cl">mascotas por siempre: servicio 24/7 en la region metropolitana</a></div>
-            <br>
-        <li><b>Limpieza de la herida: </b>Limpiar la zona afectada con solución salina estéril.</li>
-            <br>
+       <li><b>www.mascotasporsiempre.cl: </b>servicio 24/7 de servicios funebres en la region metropolitana</li>
+        <br>  
+       <img src="imagenes/quemaduras_gatos.webp" class="image-02" alt=""> 
+       <br>
         <li><b>Vendajes: </b>Cubrir la herida con vendajes estériles y con una gaza limpia para que el animal no se lama</li>
             <br>
         <li><b>LLEVAR DE URGENCIAS AL VETERINARIO: </b>solo el especialista puede evaluar y dar medicamentos adecuados para
