--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><a href="gatos negros.html">peluqueria a domicilio</a></li>
             <li><a href="gestos gatunos.html">tiendas de peluqueria</a></li>
             <li><a href="hierba gatera.html">hoteles</a></li>
-            <li><a href="hierba gatera.html">adistramiento felino</a></li>
+            <li><a href="hierba gatera.html">adiestramiento felino</a></li>
             <li><a href="hierba gatera.html">tiendas economicas</a></li>
           </ul>
         </li> -->
