--- a/cremaciones.html
+++ b/cremaciones.html
@@ -58,7 +58,6 @@
     <!--inicio texto explicativo-->
     <h1>cremaciones de mascotas</h1>
     <div class="contenedorhierba">
-      <img src="imagenes/gato-quemado.webp" class="image-02" alt="">
       <p class="contenidoprincipal"> perder a una parte importnte de tu familia como lo fue tu gato es doloroso y te 
         deja en muchos casos con una sensación de desesperanza, pero para ello hay un servicio que es muy 
         recurrente y que es el servicio funebre de la cremación que se hace tanto para animales como para personas. 
@@ -66,11 +65,16 @@
     </div>
     <div>
       <ol>
-       <li><b>www.mascotasporsiempre.cl: </b>servicio 24/7 de servicios funebres en la region metropolitana</li>
+       <li><b>www.mascotasporsiempre.cl: </b>servicio 24/7 de servicios funebres y eutanasia en la region metropolitana</li>
         <br>  
-       <img src="imagenes/quemaduras_gatos.webp" class="image-02" alt=""> 
+        <a href="https://mascotaporsiempre.cl/" target="_blank">
+          <img src="imagenes/quemaduras_gatos.webp" class="image-02" alt=""> </a>
        <br>
-        <li><b>Vendajes: </b>Cubrir la herida con vendajes estériles y con una gaza limpia para que el animal no se lama</li>
+        <li><b>www.haustierhaus.cl: </b>servicios están disponibles exclusivamente en la ciudad de Santiago, de lunes a viernes, entre 
+          las 8:00 a 21:00 horas, días sábados y domingos entre las 8:00 a 20:00 horas.</li>
+          <br>  
+       <a href="https://haustierhaus.cl/" target="_blank">
+          <img src="imagenes/quemaduras_gatos.webp" class="image-02" alt=""> </a>
             <br>
         <li><b>LLEVAR DE URGENCIAS AL VETERINARIO: </b>solo el especialista puede evaluar y dar medicamentos adecuados para
           desinflamar la herida y ayudar al dolor con medicamentos.</li>
@@ -79,43 +83,11 @@
    </div>  <!--fin texto explicativo-->
 
     <!--inicio dato en recuadro-->
-    <p class="parrafo">NUNCA USAR HIELO SOBRE UNA QUEMADURA, ESTO SOLO PROVOCARA UN DAÑO MAYOR AL EXPUESTO.
+    <p class="parrafo">RECUERDA QUE PEDIR AYUDA PARA SUPERAR LA PERDIDA DE UNA MASCOTA ES TAN VALIDO COMO SI PERDIERAS
+      A UN SER HUMANO QUERIDO,NO TE HUNDAS EN ESE DOLOR,CONTACTA A UNA TERAPEUTA O UN PSICOLOGO
     </p> <!--fin dato en recuadro-->
 
-    <h1>Causas de las quemaduras</h1> <!--inicio 2do contenido-->
-    <div class="contenedorgatorelajado">
-      <p class="contenidoprincipal"> las causas de una quemadura pueden ser de diversos tipos por lo que la precaucion siempre
-         es primero. a continuacion te dejamos las causas donde mas se presentan una quemadura.
-      </div>
-<div>
-      <ol>
-        <li><b>Quemaduras por radiación: </b> Exposición prolongada a la luz solar sin protección adecuada.Limita 
-          la exposición al sol de tu gato, especialmente durante las horas de mayor intensidad. Si es posible, 
-          sácalo a pasear temprano por la mañana o al atardecer.estas quemaduras pasan en gatos sin pelo o razurados
-          en epocas de calor por su gran melena</li>
-            <br>
-        <li><b>quemaduras Térmicas: </b>Contacto con objetos calientes, líquidos en ebullición o incendios.Ten 
-          cuidado con las fuentes de calor como estufas, velas, o líquidos calientes.</li>
-            <br>
-        <li><b>quemaduras Químicas: </b>Exposición a productos de limpieza, ácidos o alcalinos fuertes.Mantén los productos químicos, 
-          como limpiadores, disolventes y ácidos, fuera del alcance de tu gato. </li>
-            <br>
-        <li><b>quemaduras Eléctricas: </b>Masticación de cables eléctricos o descargas eléctricas.</li>
-      </ol>
-    </p> 
-   </div> 
-   <img src="imagenes/quemaduras_gatos.webp" class="image-02" alt=""> <!--fin texto explicativo-->
-   
-
-    <!--fin contenido segundo-->
-    <p>ingresar comentario</p>  <!-- fin-->
-    <form> 
-    <input type="text" id="mensaje" placeholder="dejar mensaje">
-      <button id="btnenviar">enviar</button>
-    </form>   <!--aqui termina ingreso formula para formulario-->
-    <form>     <!--como meter texto crudo-->
-      <p id="prueba"></p> <!--texto:atte.kazu-->
-    </form>    <!--aqui termina como meter texto crudo-->
+    
 
     <div class="container">      <!--aqui comienza contenedores-->
      <div class="col"><a href="hierba gatera.html">la hierba gatera y sus propiedades</a></div>
