--- a/cremaciones.html
+++ b/cremaciones.html
@@ -43,12 +43,12 @@
             <li><a href="botiquin para S.O.S.html">botiquin para S.O.S</a></li>
           </ul>
           </li>
-        <!-- <li class="dropdown"><a href="#">servicios funebres ▾</a>
+        <li class="dropdown"><a href="#">servicios funebres ▾</a>
           <ul class="dropdown-menu">
-            <li><a href="#">taxidermia</a></li>
-            <li><a href="#">retratos de mascotas</a></li>
+            <!-- <li><a href="#">taxidermia</a></li>
+            <li><a href="#">retratos de mascotas</a></li> -->
           </ul>
-        </li> -->
+        </li>
         <li><a href="contacto.html">contacto</a></li>
       </ul>
     </nav> <!-- fin cabecera-->
@@ -68,16 +68,18 @@
        <li><b>www.mascotasporsiempre.cl: </b>servicio 24/7 de servicios funebres y eutanasia en la region metropolitana</li>
         <br>  
         <a href="https://mascotaporsiempre.cl/" target="_blank">
-          <img src="imagenes/quemaduras_gatos.webp" class="image-02" alt=""> </a>
+          <img src="imagenes/mascotaspor siempre.webp" class="image-04" alt=""> </a>
        <br>
         <li><b>www.haustierhaus.cl: </b>servicios están disponibles exclusivamente en la ciudad de Santiago, de lunes a viernes, entre 
           las 8:00 a 21:00 horas, días sábados y domingos entre las 8:00 a 20:00 horas.</li>
           <br>  
        <a href="https://haustierhaus.cl/" target="_blank">
-          <img src="imagenes/quemaduras_gatos.webp" class="image-02" alt=""> </a>
+          <img src="imagenes/Haustierhaus-cremacion-ecologica-de-mascotas.webp" class="image-03" alt=""> </a>
             <br>
-        <li><b>LLEVAR DE URGENCIAS AL VETERINARIO: </b>solo el especialista puede evaluar y dar medicamentos adecuados para
-          desinflamar la herida y ayudar al dolor con medicamentos.</li>
+        <li><b>www.huellitasypatitaspet.cl: </b>servicio de quematorio ecologico y eutanasia para la region metropolitana 24/7</li>
+          <br>  
+        <a href="https://huellitasypatitaspet.cl/" target="_blank">
+          <img src="imagenes/Huellitas-y-Patitas-Pets.webp" class="image-04" alt=""> </a>
       </ol>
     </p> 
    </div>  <!--fin texto explicativo-->
