--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
             <li><a href="botiquin para S.O.S.html">botiquin para S.O.S</a></li>
           </ul>
           </li>
-        <!-- <li class="dropdown"><a href="#">servicios funebres ▾</a>
+        <li class="dropdown"><a href="#">servicios funebres ▾</a>
           <ul class="dropdown-menu">
             <li><a href="cremaciones.html">cremación</a></li>
-            <li><a href="#">taxidermia</a></li>
-            <li><a href="#">retratos de mascotas</a></li>
+            <!-- <li><a href="#">taxidermia</a></li>
+            <li><a href="#">retratos de mascotas</a></li> -->
           </ul>
-        </li> -->
+        </li>
         <li><a href="contacto.html">contacto</a></li>
       </ul>
     </nav> <!-- fin cabecera-->
