--- a/botiquin para S.O.S.html
+++ b/botiquin para S.O.S.html
@@ -43,13 +43,13 @@
             <li><a href="heridas menores.html">heridas menores</a></li>
           </ul>
           </li>
-        <!-- <li class="dropdown"><a href="#">servicios funebres ▾</a>
+        <li class="dropdown"><a href="#">servicios funebres ▾</a>
           <ul class="dropdown-menu">
-            <li><a href="#">cremación</a></li>
-            <li><a href="#">taxidermia</a></li>
-            <li><a href="#">retratos de mascotas</a></li>
+            <li><a href="cremaciones.html">cremación</a></li>
+            <!-- <li><a href="#">taxidermia</a></li>
+            <li><a href="#">retratos de mascotas</a></li> -->
           </ul>
-        </li> -->
+        </li>
         <li><a href="contacto.html">contacto</a></li>
       </ul>
     </nav> <!-- fin cabecera-->
